# qwen-p2p

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY_FIXES.md
gh_2.60.1_linux_amd64/share/man/man1/: gh-alias-delete.1  gh-alias-import.1  gh-alias-list.1  gh-alias-set.1  gh-alias.1  gh-api.1  gh-attestation-download.1  gh-attestation-trusted-root.1  gh-attestation-verify.1  gh-attestation.1  gh-auth-login.1  gh-auth-logout.1  gh-auth-refresh.1  gh-auth-setup-git.1  gh-auth-status.1  gh-auth-switch.1  gh-auth-token.1  gh-auth.1  gh-browse.1  gh-cache-delete.1  gh-cache-list.1  gh-cache.1  gh-codespace-code.1  gh-codespace-cp.1  gh-codespace-create.1  gh-codespace-delete.1  gh-codespace-edit.1  gh-codespace-jupyter.1  gh-codespace-list.1  gh-codespace-logs.1  gh-codespace-ports-forward.1  gh-codespace-ports-visibility.1  gh-codespace-ports.1  gh-codespace-rebuild.1  gh-codespace-ssh.1  gh-codespace-stop.1  gh-codespace-view.1  gh-codespace.1  gh-completion.1  gh-config-clear-cache.1  (+158 more)
include/core/: application.hpp  filemanager.hpp  peerinfo.hpp
include/network/: connectionhandler.hpp  discovery.hpp  p2pengine.hpp
include/ui/: mainview.hpp
qml/: main.qml
qml/components/: FileTransferItem.qml  PeerList.qml  StatusBar.qml
src/: main.cpp
src/core/: application.cpp  filemanager.cpp
src/network/: discovery.cpp  p2pengine.cpp
src/ui/: mainview.cpp
